VDR Plugin 'epgsearch' Revision History
---------------------------------------

2012-06-xx; Version 1.0.1 - maintenance release
new:
- new service interface "Epgsearch-enablesearchtimers-v1.0" to switch the search timers 
  background update on/off. Updated the sample in source/vdr-epgsearchclient-0.0.2.tgz 
  to use the new service.
- new format specifier like %02i in the epgsearchcats.conf, thanks to Joe_D for providing
  a patch ('man 5 epgsearchcats.conf' for more information).
- in the menu 'recordings done' you can now toggle the blue key to 'Orphaned' to show
  recordings with vanished search timers.
- when channel separators are displayed the filling '-' can cause problems in the output
  of graphlcd. Set PLUGIN_EPGSEARCH_SEP_ITEMS=--- in your Make.config to avoid this. Most
  skins (except classic, st:tng)  will translate '---' into a single line anyway 
  (Feature #857, thanks to 'KeineAhnung' for providing a patch)
- search timers are now processed by their descending timer priority. Search timers with the same priority
  are sorted by their search term. Thanks to Anonym for providing a patch 
- new bugtracker at http://projects.vdr-developer.org/projects/plg-epgsearch - thanks to Tobias Grimm
- dropped old code for vdr < 1.6.0, thanks to Ville Skyttä for whole pile of patches
- updated MainMenuHooks patch to 1.0.1
- czech translation, thanks to Radek Stastny

fixes:
- fixed a crash when editing blacklists


2011-09-11; Version 1.0.0
new:
- supports vdr-1.6.0 to vdr-1.7.21
- avoid repeats with new 'compare date' entry: compare two events by their date to ignore
  repeats within the same day, week or month
- global blacklists: blacklists for search timers can now be global to exclude
  generally unwanted events (like on my double SD/HD channels). Default mode for search
  timers is now 'only global', but can be  set to 'none' to ignore also global blacklists.
- new setup variable epgsearch.ConflCheckCmd (no gui for this, so edit setup.conf!), that